--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,18 @@
 $sidebarBg: #354458;
 $sidebarActive: #3399FF;
+$sidebarTextColor: #ffffff;
 
 $headerBg: #29335C;
 $headerAct: #ffd04b;
+$headerTextColor: #ffffff;
+
+$bar-color: #FFE869;
 
 :export {
     sidebarBg: $sidebarBg;
     sidebarActive: $sidebarActive;
     headerBg: $headerBg;
     headerAct: $headerAct;
+    headerTextColor: $headerTextColor;
+    sidebarTextColor: $sidebarTextColor;
 }
